ci(workflows): switch build pipelines to distro branch
Signed-off-by: Vadim Polulyakh <bavadim@gmail.com>

--- a/.github/workflows/build-notify.yml
+++ b/.github/workflows/build-notify.yml
@@ -15,7 +15,7 @@ jobs:
       github.event.workflow_run.conclusion == 'failure' &&
       (
         github.event.workflow_run.name != 'CI' ||
-        github.event.workflow_run.head_branch == 'main' ||
+        github.event.workflow_run.head_branch == 'distro' ||
         github.event.workflow_run.event == 'merge_group'
       )
     runs-on: ubuntu-latest
