feat(desktop): add InsightStream distro bootstrap, branding, and RU localization
Signed-off-by: Vadim Polulyakh <bavadim@gmail.com>

--- a/.github/workflows/bundle-desktop.yml
+++ b/.github/workflows/bundle-desktop.yml
@@ -30,6 +30,8 @@ on:
     secrets:
       OSX_CODESIGN_ROLE:
         required: false
+      OPENAI_API_KEY:
+        required: true
 
 name: Reusable workflow to bundle desktop app
 
@@ -149,6 +151,15 @@ jobs:
       - name: Check disk space before bundling
         run: df -h
 
+      - name: Generate distribution config
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        run: |
+          set -euo pipefail
+          jq --arg api_key "$OPENAI_API_KEY" '.provider.api_key = $api_key' \
+            src/distribution/distribution-config.template.json > src/distribution/distribution-config.json
+        working-directory: ui/desktop
+
       - name: Build App
         run: |
           source ../../bin/activate-hermit
@@ -166,6 +177,33 @@ jobs:
           fi
         working-directory: ui/desktop
 
+      - name: Resolve bundle paths
+        run: |
+          set -euo pipefail
+          BUNDLE_DIR=$(find ui/desktop/out -maxdepth 1 -type d -name '*-darwin-arm64' | head -n 1)
+          if [ -z "${BUNDLE_DIR}" ]; then
+            echo "Failed to resolve macOS bundle directory"
+            exit 1
+          fi
+          APP_PATH=$(find "${BUNDLE_DIR}" -maxdepth 1 -type d -name '*.app' | head -n 1)
+          ZIP_PATH=$(find "${BUNDLE_DIR}" -maxdepth 1 -type f -name 'InsightStream-goose.zip' | head -n 1)
+          if [ -z "${APP_PATH}" ] || [ -z "${ZIP_PATH}" ]; then
+            echo "Failed to resolve macOS bundle artifacts"
+            exit 1
+          fi
+          BUNDLE_DIR=$(realpath "${BUNDLE_DIR}")
+          APP_PATH=$(realpath "${APP_PATH}")
+          ZIP_PATH=$(realpath "${ZIP_PATH}")
+          ZIP_NAME=$(basename "${ZIP_PATH}")
+          APP_EXECUTABLE="${APP_PATH}/Contents/MacOS/$(basename "${APP_PATH}" .app)"
+          {
+            echo "BUNDLE_DIR=${BUNDLE_DIR}"
+            echo "APP_PATH=${APP_PATH}"
+            echo "ZIP_PATH=${ZIP_PATH}"
+            echo "ZIP_NAME=${ZIP_NAME}"
+            echo "APP_EXECUTABLE=${APP_EXECUTABLE}"
+          } >> "$GITHUB_ENV"
+
       - name: Configure AWS credentials
         if: ${{ inputs.signing }}
         uses: aws-actions/configure-aws-credentials@61815dcd50bd041e203e49132bacad1fd04d2708  # v5.1.1
@@ -181,11 +219,11 @@ jobs:
           echo "⬆️ uploading unsigned app"
           source_job_url="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           unsigned_url="s3://block-goose-artifacts-bucket-production/unsigned/goose-${GITHUB_SHA}-${{ github.run_id }}-arm64.zip"
-          
-          zip -q -u -r out/Goose-darwin-arm64/Goose.zip entitlements.plist
+
+          zip -q -u -r "${ZIP_PATH}" entitlements.plist
 
           # upload unsigned goose to transfer bucket so it can be passed to lambda
-          aws s3 cp --quiet out/Goose-darwin-arm64/Goose.zip "${unsigned_url}"
+          aws s3 cp --quiet "${ZIP_PATH}" "${unsigned_url}"
 
           # begin signing
           echo "🚀 launching signing process"
@@ -237,7 +275,7 @@ jobs:
 
           # download the signed app from S3
           echo "⬇️ downloading signed app"
-          aws s3 cp --quiet "${signed_url}" out/Goose-darwin-arm64/Goose.zip
+          aws s3 cp --quiet "${signed_url}" "${ZIP_PATH}"
         working-directory: ui/desktop
 
       - name: Final cleanup before artifact upload
@@ -253,25 +291,25 @@ jobs:
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f  # v6.0.0
         with:
           name: Goose-darwin-arm64
-          path: ui/desktop/out/Goose-darwin-arm64/Goose.zip
+          path: ${{ env.ZIP_PATH }}
 
       - name: Quick launch test (macOS)
         if: ${{ inputs.quick_test }}
         run: |
           # Ensure no quarantine attributes (if needed)
-          xattr -cr "ui/desktop/out/Goose-darwin-arm64/Goose.app"
-          echo "Opening Goose.app..."
-          open -g "ui/desktop/out/Goose-darwin-arm64/Goose.app"
+          xattr -cr "${APP_PATH}"
+          echo "Opening ${APP_PATH}..."
+          open -g "${APP_PATH}"
 
           # Give the app a few seconds to start and write logs
           sleep 5
 
           # Check if it's running
-          if pgrep -f "Goose.app/Contents/MacOS/Goose" > /dev/null; then
+          if pgrep -f "${APP_EXECUTABLE}" > /dev/null; then
             echo "App appears to be running."
           else
             echo "App did not stay open. Possible crash or startup error."
             exit 1
           fi
           # Kill the app to clean up
-          pkill -f "Goose.app/Contents/MacOS/Goose"
+          pkill -f "${APP_EXECUTABLE}"
