--- a/.github/workflows/bundle-desktop-intel.yml
+++ b/.github/workflows/bundle-desktop-intel.yml
@@ -255,6 +255,7 @@ jobs:
         with:
           name: InsightStream-goose-macos-x64
           path: ${{ env.CANONICAL_ZIP_PATH }}
+          if-no-files-found: error
 
       - name: Quick launch test (macOS)
         if: ${{ inputs.quick_test }}
