--- a/.github/workflows/bundle-desktop-main-unsigned.yml
+++ b/.github/workflows/bundle-desktop-main-unsigned.yml
@@ -8,7 +8,7 @@ on:
 
 permissions:
   id-token: write
-  contents: read
+  contents: write
   actions: read
 
 concurrency:
@@ -38,3 +38,33 @@ jobs:
     uses: ./.github/workflows/bundle-desktop-windows.yml
     with:
       signing: false
+
+  release-stable:
+    name: Publish Desktop Bundles to Stable Release
+    runs-on: ubuntu-latest
+    needs: [bundle-desktop, bundle-desktop-intel, bundle-desktop-windows]
+    permissions:
+      contents: write
+    steps:
+      - name: Download all workflow artifacts
+        uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131  # v7.0.0
+        with:
+          merge-multiple: true
+
+      - name: List release assets
+        run: ls -la
+
+      - name: Publish stable release
+        uses: ncipollo/release-action@b7eabc95ff50cbeeedec83973935c8f306dfcd0b  # v1.20.0
+        with:
+          tag: stable
+          name: Stable
+          token: ${{ secrets.GITHUB_TOKEN }}
+          artifacts: |
+            InsightStream-goose-macos-arm64.zip
+            InsightStream-goose-macos-x64.zip
+            InsightStream-goose-windows-x64.zip
+          allowUpdates: true
+          replacesArtifacts: true
+          omitBody: true
+          omitPrereleaseDuringUpdate: true
