feat(landing): simplify content and add stock visuals
Signed-off-by: Vadim Polulyakh <bavadim@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -41,9 +41,11 @@ debug_*.txt
 # Docs
 # Dependencies
 /node_modules
+/site/landing/node_modules
 
 # Production
 /build
+/site/landing/build
 
 # Generated files
 .docusaurus
