--- a/.github/workflows/bundle-desktop-main-unsigned.yml
+++ b/.github/workflows/bundle-desktop-main-unsigned.yml
@@ -36,6 +36,7 @@ jobs:
       signing: true
     secrets:
       OSX_CODESIGN_ROLE: ${{ secrets.OSX_CODESIGN_ROLE }}
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
   bundle-desktop-windows:
     uses: ./.github/workflows/bundle-desktop-windows.yml
