--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,6 +66,7 @@ jobs:
       signing: true
     secrets:
       OSX_CODESIGN_ROLE: ${{ secrets.OSX_CODESIGN_ROLE }}
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
   # ------------------------------------------------------------
   # 5) Bundle Desktop App (Linux)
