--- a/.github/workflows/rebuild-skills-marketplace.yml
+++ b/.github/workflows/rebuild-skills-marketplace.yml
@@ -22,6 +22,7 @@ concurrency:
 
 jobs:
   rebuild-docs:
+    if: github.repository == 'block/goose'
     runs-on: ubuntu-latest
     permissions:
       contents: write
