fix(ci): skip mac signing steps when role secret is unavailable
Signed-off-by: Vadim Polulyakh <bavadim@gmail.com>

--- a/.github/workflows/bundle-desktop.yml
+++ b/.github/workflows/bundle-desktop.yml
@@ -224,14 +224,14 @@ jobs:
           done
 
       - name: Configure AWS credentials
-        if: ${{ inputs.signing }}
+        if: ${{ inputs.signing && secrets.OSX_CODESIGN_ROLE != '' }}
         uses: aws-actions/configure-aws-credentials@61815dcd50bd041e203e49132bacad1fd04d2708  # v5.1.1
         with:
           role-to-assume: "${{ secrets.OSX_CODESIGN_ROLE }}"
           aws-region: us-west-2
 
       - name: Codesigning and Notarization
-        if: ${{ inputs.signing }}
+        if: ${{ inputs.signing && secrets.OSX_CODESIGN_ROLE != '' }}
         run: |
           set -e
 
@@ -298,7 +298,7 @@ jobs:
         working-directory: ui/desktop
 
       - name: Validate signed app bundle
-        if: ${{ inputs.signing }}
+        if: ${{ inputs.signing && secrets.OSX_CODESIGN_ROLE != '' }}
         run: |
           set -euo pipefail
           CHECK_DIR="$(mktemp -d)"
