--- a/.github/workflows/bundle-desktop-intel.yml
+++ b/.github/workflows/bundle-desktop-intel.yml
@@ -171,14 +171,14 @@ jobs:
           } >> "$GITHUB_ENV"
 
       - name: Configure AWS credentials
-        if: ${{ inputs.signing }}
+        if: ${{ inputs.signing && secrets.OSX_CODESIGN_ROLE != '' }}
         uses: aws-actions/configure-aws-credentials@61815dcd50bd041e203e49132bacad1fd04d2708  # v5.1.1
         with:
           role-to-assume: "${{ secrets.OSX_CODESIGN_ROLE }}"
           aws-region: us-west-2
 
       - name: Codesigning and Notarization
-        if: ${{ inputs.signing }}
+        if: ${{ inputs.signing && secrets.OSX_CODESIGN_ROLE != '' }}
         run: |
           set -e
 
