--- a/.github/workflows/bundle-desktop-installers.yml
+++ b/.github/workflows/bundle-desktop-installers.yml
@@ -131,6 +131,7 @@ jobs:
   build-macos-dmg:
     name: Build macOS DMG
     runs-on: macos-latest
+    environment: release
     env:
       GOOSE_BUNDLE_NAME: ${{ vars.GOOSE_BUNDLE_NAME }}
       GOOSE_LOCALE: ${{ vars.GOOSE_LOCALE }}
@@ -184,6 +185,61 @@ jobs:
           npm ci
           npm run make -- --platform=darwin --arch="${MAC_ARCH}"
 
+      - name: Sign and notarize macOS artifacts (Individual API key)
+        if: ${{ inputs.signing && vars.DESKTOP_SIGNING_ENABLED == 'true' && vars.MAC_SIGNING_MODE == 'notarytool_individual' }}
+        env:
+          APPLE_API_KEY_ID: ${{ vars.APPLE_API_KEY_ID }}
+          APPLE_TEAM_ID: ${{ vars.APPLE_TEAM_ID }}
+          APPLE_DEVELOPER_ID_APP_CERT_P12_BASE64: ${{ secrets.APPLE_DEVELOPER_ID_APP_CERT_P12_BASE64 }}
+          APPLE_DEVELOPER_ID_APP_CERT_PASSWORD: ${{ secrets.APPLE_DEVELOPER_ID_APP_CERT_PASSWORD }}
+          APPLE_API_PRIVATE_KEY_P8_BASE64: ${{ secrets.APPLE_API_PRIVATE_KEY_P8_BASE64 }}
+        run: |
+          set -euo pipefail
+          cd ui/desktop
+
+          if [ -z "${APPLE_API_KEY_ID:-}" ] || [ -z "${APPLE_TEAM_ID:-}" ] || [ -z "${APPLE_DEVELOPER_ID_APP_CERT_P12_BASE64:-}" ] || [ -z "${APPLE_DEVELOPER_ID_APP_CERT_PASSWORD:-}" ] || [ -z "${APPLE_API_PRIVATE_KEY_P8_BASE64:-}" ]; then
+            echo "Missing required Apple signing/notarization env values"
+            exit 1
+          fi
+
+          KEYCHAIN_PATH="$RUNNER_TEMP/build-signing.keychain-db"
+          KEYCHAIN_PASSWORD="$(openssl rand -hex 24)"
+          CERT_PATH="$RUNNER_TEMP/dev-id.p12"
+          API_KEY_PATH="$RUNNER_TEMP/AuthKey_${APPLE_API_KEY_ID}.p8"
+
+          echo "$APPLE_DEVELOPER_ID_APP_CERT_P12_BASE64" | base64 --decode > "$CERT_PATH" 2>/dev/null || echo "$APPLE_DEVELOPER_ID_APP_CERT_P12_BASE64" | base64 -D > "$CERT_PATH"
+          echo "$APPLE_API_PRIVATE_KEY_P8_BASE64" | base64 --decode > "$API_KEY_PATH" 2>/dev/null || echo "$APPLE_API_PRIVATE_KEY_P8_BASE64" | base64 -D > "$API_KEY_PATH"
+
+          security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
+          security list-keychains -d user -s "$KEYCHAIN_PATH"
+          security default-keychain -s "$KEYCHAIN_PATH"
+
+          security import "$CERT_PATH" -k "$KEYCHAIN_PATH" -P "$APPLE_DEVELOPER_ID_APP_CERT_PASSWORD" -T /usr/bin/codesign -T /usr/bin/security
+          security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+
+          IDENTITY="$(security find-identity -v -p codesigning "$KEYCHAIN_PATH" | grep 'Developer ID Application' | head -n1 | sed -E 's/.*\"(.*)\".*/\1/')"
+          if [ -z "$IDENTITY" ]; then
+            echo "Developer ID Application identity not found in imported keychain"
+            exit 1
+          fi
+
+          APP_PATH="$(find out -type d -name '*.app' | head -n1)"
+          DMG_PATH="$(find out/make -type f -name '*.dmg' | head -n1)"
+
+          if [ -z "$APP_PATH" ] || [ -z "$DMG_PATH" ]; then
+            echo "Could not find app or dmg artifact for signing"
+            exit 1
+          fi
+
+          codesign --force --deep --options runtime --timestamp --sign "$IDENTITY" "$APP_PATH"
+          codesign --verify --deep --strict --verbose=2 "$APP_PATH"
+
+          xcrun notarytool submit "$DMG_PATH" --key "$API_KEY_PATH" --key-id "$APPLE_API_KEY_ID" --wait
+          xcrun stapler staple "$DMG_PATH"
+          spctl -a -t open --context context:primary-signature -v "$DMG_PATH"
+
       - name: Upload DMG artifact
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
         with:
@@ -195,19 +251,21 @@ jobs:
     name: Signing note
     if: ${{ inputs.signing && vars.DESKTOP_SIGNING_ENABLED == 'true' }}
     runs-on: ubuntu-latest
+    environment: release
     needs:
       - build-windows-msi
       - build-macos-dmg
     steps:
       - name: Signing status
         run: |
-          echo "Signing was requested but is not automated in this workflow yet."
-          echo "Use PRD_desktop-cicd-msi-dmg-signing.md for CI/local signing runbooks and required secrets."
+          echo "Signing was requested, but this workflow currently automates only macOS notarization mode:"
+          echo "MAC_SIGNING_MODE=notarytool_individual"
 
   publish-release:
     name: Publish MSI/DMG Release Assets
     if: ${{ startsWith(github.ref, 'refs/tags/v1.') }}
     runs-on: ubuntu-latest
+    environment: release
     needs:
       - build-windows-msi
       - build-macos-dmg
