--- a/crates/goose/Cargo.toml
+++ b/crates/goose/Cargo.toml
@@ -107,7 +107,6 @@ candle-core = { version = "0.9", default-features = false }
 candle-nn = { version = "0.9", default-features = false }
 candle-transformers = { version = "0.9", default-features = false }
 byteorder = "1.5.0"
-tokenizers = "0.21.0"
 hf-hub = { version = "0.4.3", default-features = false, features = ["tokio"] }
 symphonia = { version = "0.5", features = ["all"] }
 rubato = "0.16"
@@ -129,8 +128,13 @@ unbinder = "0.1.7"
 llama-cpp-2 = { version = "0.1.133", features = ["sampler"] }
 encoding_rs = "0.8.35"
 
+[target.'cfg(not(target_os = "windows"))'.dependencies]
+tokenizers = "0.21.0"
+
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3", features = ["wincred"] }
+# Disable esaxx_fast on Windows to avoid MSVC CRT linker mismatches in installer builds.
+tokenizers = { version = "0.21.0", default-features = false, features = ["onig", "progressbar"] }
 
 # Platform-specific GPU acceleration for Whisper and local inference
 [target.'cfg(target_os = "macos")'.dependencies]
