--- a/crates/goose/Cargo.toml
+++ b/crates/goose/Cargo.toml
@@ -127,10 +127,13 @@ pctx_code_mode = "^0.2.3"
 unbinder = "0.1.7"
 llama-cpp-2 = { version = "0.1.133", features = ["sampler"] }
 encoding_rs = "0.8.35"
+
+[target.'cfg(not(target_os = "windows"))'.dependencies]
 tokenizers = "0.21.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3", features = ["wincred"] }
+tokenizers = { version = "0.21.0", default-features = false, features = ["onig", "progressbar"] }
 
 # Platform-specific GPU acceleration for Whisper and local inference
 [target.'cfg(target_os = "macos")'.dependencies]
