Revert "feat: add local inference provider with llama.cpp backend and HuggingFace model management (#6933)"
This reverts commit ddd35f6d47f5b8e1cf7ad1dd3003fdce3c6ffca6.

--- a/crates/goose/Cargo.toml
+++ b/crates/goose/Cargo.toml
@@ -9,7 +9,7 @@ description.workspace = true
 
 [features]
 default = []
-cuda = ["candle-core/cuda", "candle-nn/cuda", "llama-cpp-2/cuda"]
+cuda = ["candle-core/cuda", "candle-nn/cuda"]
 
 [lints]
 workspace = true
@@ -125,8 +125,6 @@ ignore = { workspace = true }
 which = { workspace = true }
 pctx_code_mode = "^0.2.3"
 unbinder = "0.1.7"
-llama-cpp-2 = { version = "0.1.133", features = ["sampler"] }
-encoding_rs = "0.8.35"
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
 tokenizers = "0.21.0"
@@ -135,11 +133,10 @@ tokenizers = "0.21.0"
 winapi = { version = "0.3", features = ["wincred"] }
 tokenizers = { version = "0.21.0", default-features = false, features = ["onig", "progressbar"] }
 
-# Platform-specific GPU acceleration for Whisper and local inference
+# Platform-specific GPU acceleration for Whisper
 [target.'cfg(target_os = "macos")'.dependencies]
 candle-core = { version = "0.9", default-features = false, features = ["metal"] }
 candle-nn = { version = "0.9", default-features = false, features = ["metal"] }
-llama-cpp-2 = { version = "0.1.133", features = ["sampler", "metal"] }
 
 [dev-dependencies]
 serial_test = { workspace = true }
@@ -161,7 +158,6 @@ path = "examples/agent.rs"
 [[example]]
 name = "databricks_oauth"
 path = "examples/databricks_oauth.rs"
-
 
 [[bin]]
 name = "build_canonical_models"
