fix(windows): disable llama local inference backend for windows builds
Signed-off-by: Vadim Polulyakh <bavadim@gmail.com>

--- a/crates/goose/Cargo.toml
+++ b/crates/goose/Cargo.toml
@@ -125,11 +125,13 @@ ignore = { workspace = true }
 which = { workspace = true }
 pctx_code_mode = "^0.2.3"
 unbinder = "0.1.7"
-llama-cpp-2 = { version = "0.1.133", features = ["sampler"] }
 encoding_rs = "0.8.35"
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
 tokenizers = "0.21.0"
+
+[target.'cfg(all(not(target_os = "windows"), not(target_os = "macos")))'.dependencies]
+llama-cpp-2 = { version = "0.1.133", features = ["sampler"] }
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3", features = ["wincred"] }
