--- a/.github/workflows/bundle-desktop-installers.yml
+++ b/.github/workflows/bundle-desktop-installers.yml
@@ -348,7 +348,9 @@ jobs:
           xattr -cr "$APP_PATH"
           codesign --force --deep --options runtime --timestamp --sign "$IDENTITY" "$APP_PATH"
           codesign --verify --deep --strict --verbose=2 "$APP_PATH"
-          spctl -a -t exec -v "$APP_PATH"
+          # Before notarization this commonly reports "Unnotarized Developer ID".
+          # Keep it informational so we fail only on signing/notarization errors.
+          spctl -a -t exec -v "$APP_PATH" || true
 
           APP_NAME="$(basename "$APP_PATH" .app)"
           DMG_PATH="$RUNNER_TEMP/${APP_NAME}-${MAC_ARCH}-signed.dmg"
