--- a/agent/package.json
+++ b/agent/package.json
@@ -1,38 +1,38 @@
 {
   "name": "agent",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "vitest run",
-    "build": "tsc --noEmit",
-    "test:watch": "vitest",
-    "dev": "tsx src/index.ts",
-    "server:start": "tsx src/server/index.ts",
-    "openapi:examples": "tsx scripts/generate-openapi-examples.ts",
-    "openapi:validate": "openapi validate requirements/GOOSE_SERVER_OPENAPI.json",
-    "contract:dredd": "dredd requirements/GOOSE_SERVER_OPENAPI.json http://127.0.0.1:3001 --hookfiles=tests/contract/hooks.cjs --loglevel=error",
-    "test:contract": "start-server-and-test \"npm run server:start\" http://127.0.0.1:3001/status \"npm run contract:dredd\"",
-    "test:all": "npm run build && npm run test && npm run openapi:validate && npm run test:contract"
+    "dev": "npm run desktop:prepare-resources && sh -c 'tsx --watch src/server/index.ts & electron-forge start & vitest --watch --reporter=default --reporter=./scripts/vitest-notify-reporter.mjs'",
+    "desktop:prepare-resources": "tsx scripts/prepare-desktop-resources.ts",
+    "desktop:dev": "npm run dev",
+    "desktop:make:mac": "npm run desktop:prepare-resources && electron-forge make --platform=darwin",
+    "desktop:make:win": "npm run desktop:prepare-resources && electron-forge make --platform=win32",
+    "desktop:make:linux": "npm run desktop:prepare-resources && electron-forge make --platform=linux",
+    "test:fast": "tsc --noEmit && vitest run",
+    "test": "tsc --noEmit && biome check . && openapi validate requirements/GOOSE_SERVER_OPENAPI.json && vitest run && knip",
+    "format": "biome check --write ."
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "type": "module",
   "dependencies": {
     "@fastify/swagger": "^9.7.0",
     "fastify": "^5.7.4",
-    "fp-ts": "^2.16.11",
-    "xstate": "^5.28.0"
+    "openapi-sampler": "^1.7.0"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^7.11.1",
+    "@electron-forge/maker-deb": "^7.11.1",
+    "@electron-forge/maker-dmg": "^7.11.1",
+    "@electron-forge/maker-rpm": "^7.11.1",
+    "@electron-forge/maker-wix": "^7.11.1",
+    "@electron-forge/plugin-vite": "^7.11.1",
+    "@biomejs/biome": "^1.9.4",
     "@redocly/openapi-cli": "^0.12.16",
     "@types/node": "^25.3.2",
-    "dredd": "^14.1.0",
-    "openapi-sampler": "^1.7.0",
-    "start-server-and-test": "^2.1.5",
+    "electron": "^36.4.0",
+    "knip": "^5.64.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
+    "vite": "^7.1.5",
     "vitest": "^4.0.18"
   }
 }
